force-app/main/default/objects/Placement__c/fields/Job_City__c.field-meta.xml
<CustomField>
    <fullName>Job_City__c</fullName>
    <label>Job City</label>
    <length>25</length>
    <type>Text</type>
</CustomField>