force-app/main/default/objects/Placement__c/fields/Job_Count__c.field-meta.xml
<CustomField>
    <fullName>Job_Count__c</fullName>
    <formula>if (not (isblank (Start_Date__c)), 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Job Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>