force-app/main/default/objects/Placement__c/fields/Job_Description_Self_Directed__c.field-meta.xml
<CustomField>
    <fullName>Job_Description_Self_Directed__c</fullName>
    <description>Job Description is updated for Self-Directed Job Search through Cara Central and flow. Job Description is updated for Send Outs with Job Orders through a Workflow Rule.</description>
    <label>Job Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>