force-app/main/default/objects/Placement__c/fields/Job_Order__c.field-meta.xml
<CustomField>
    <fullName>Job_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>ECM Job Order Process for Cara</description>
    <label>Job Order</label>
    <referenceTo>Job_Order__c</referenceTo>
    <relationshipName>Placements</relationshipName>
    <type>Lookup</type>
</CustomField>