force-app/main/default/objects/Placement__c/fields/Job_Order_Close_Date__c.field-meta.xml
<CustomField>
    <fullName>Job_Order_Close_Date__c</fullName>
    <formula>Job_Order__r.Close_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Job Order Close Date</label>
    <type>Date</type>
</CustomField>