force-app/main/default/objects/Placement__c/fields/Job_Order_Open_Date__c.field-meta.xml
<CustomField>
    <fullName>Job_Order_Open_Date__c</fullName>
    <description>ECM Job Order Process for Cara</description>
    <formula>Job_Order__r.Open_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Job Order Open Date</label>
    <type>Date</type>
</CustomField>