force-app/main/default/objects/Placement__c/fields/Job_Order_Owner__c.field-meta.xml
<CustomField>
    <fullName>Job_Order_Owner__c</fullName>
    <formula>Job_Order__r.Owner:User.Full_Name__c</formula>
    <label>Job Order Owner</label>
    <type>Text</type>
</CustomField>