force-app/main/default/objects/Placement__c/fields/Job_Order_Stage__c.field-meta.xml
<CustomField>
    <fullName>Job_Order_Stage__c</fullName>
    <formula>Job_Order__r.Job_Order_Stage_Formula__c</formula>
    <label>Job Order Stage</label>
    <type>Text</type>
</CustomField>