force-app/main/default/objects/Placement__c/fields/Job_Placement_Owner__c.field-meta.xml
<CustomField>
    <fullName>Job_Placement_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Job/Placement Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Send_Outs_Placements</relationshipName>
    <type>Lookup</type>
</CustomField>