force-app/main/default/objects/Placement__c/fields/Job_Rating__c.field-meta.xml
<CustomField>
    <fullName>Job_Rating__c</fullName>
    <formula>if ( not( isnull ( Benefits__c)), 

if ( Starting_Salary_TCP__c *1.3 = 0, &quot;Not Available&quot;, 
if ( Starting_Salary_TCP__c *1.3 &gt; 0 &amp;&amp; Starting_Salary_TCP__c *1.3 &lt;= 16900, &quot;Grey&quot;, 
if ( Starting_Salary_TCP__c *1.3 &gt; 16900 &amp;&amp; Starting_Salary_TCP__c *1.3 &lt;= 24544, &quot;Yellow&quot;, 
if ( Seasonal_or_Variable_Hours__c, &quot;Yellow&quot;, &quot;Green&quot;)))), 

if ( Starting_Salary_TCP__c = 0, &quot;Not Available&quot;, 
if ( Starting_Salary_TCP__c &gt; 0 &amp;&amp; Starting_Salary_TCP__c &lt;= 16900, &quot;Grey&quot;, 
if ( Starting_Salary_TCP__c &gt; 16900 &amp;&amp; Starting_Salary_TCP__c &lt;= 24544, &quot;Yellow&quot;, 
if ( Seasonal_or_Variable_Hours__c, &quot;Yellow&quot;, &quot;Green&quot;)))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Indicates where starting salary falls in Placement Hours &amp; Wage Table, including benefits if applicable.</inlineHelpText>
    <label>Job Rating</label>
    <type>Text</type>
</CustomField>