force-app/main/default/objects/Placement__c/fields/Job_State__c.field-meta.xml
<CustomField>
    <fullName>Job_State__c</fullName>
    <inlineHelpText>Use two-letter abbreviation.</inlineHelpText>
    <label>Job State</label>
    <length>2</length>
    <type>Text</type>
</CustomField>