force-app/main/default/objects/Placement__c/fields/Job_Street_Address__c.field-meta.xml
<CustomField>
    <fullName>Job_Street_Address__c</fullName>
    <label>Job Street Address</label>
    <length>100</length>
    <type>Text</type>
</CustomField>