force-app/main/default/objects/Placement__c/fields/Job_Title_from_Job_Order__c.field-meta.xml
<CustomField>
    <fullName>Job_Title_from_Job_Order__c</fullName>
    <formula>Job_Order__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Job Title from Job Order</label>
    <type>Text</type>
</CustomField>