force-app/main/default/objects/Placement__c/fields/Job_Type__c.field-meta.xml
<CustomField>
    <fullName>Job_Type__c</fullName>
    <description>Was in Help Text, not all accurate: Placement Milestones are calculated for Full Time jobs only. In addition, multiple Full Time placements in the same Agency Contract is not allowed for a Case Record.</description>
    <inlineHelpText>As of October 2019, &quot;External Transitional&quot; are reclassified as &quot;Long-Term&quot;. The update in Salesforce will follow in early CY20.</inlineHelpText>
    <label>Job/Placement Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Long-Term</fullName>
            </value>
            <value>
                <fullName>Short-Term</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>