force-app/main/default/objects/Placement__c/fields/Job_Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>Job_Zip_Code__c</fullName>
    <label>Job Zip Code</label>
    <length>5</length>
    <type>Text</type>
</CustomField>