force-app/main/default/objects/Placement__c/fields/Lapsed_Days__c.field-meta.xml
<CustomField>
    <fullName>Lapsed_Days__c</fullName>
    <description>ECM Job Order Process for Cara</description>
    <formula>Send_Out_Date__c -  First_Interview_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Lapsed days between Send Out and First Interview.</inlineHelpText>
    <label>Lapsed Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>