force-app/main/default/objects/Placement__c/fields/Latest_Advancement__c.field-meta.xml
<CustomField>
    <fullName>Latest_Advancement__c</fullName>
    <label>Latest Advancement</label>
    <summarizedField>Advancement__c.Date__c</summarizedField>
    <summaryForeignKey>Advancement__c.Job_Placement__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>