force-app/main/default/objects/Placement__c/fields/Latest_Hours_TCP__c.field-meta.xml
<CustomField>
    <fullName>Latest_Hours_TCP__c</fullName>
    <inlineHelpText>Per week. To update, scroll down and click &quot;New Advancement&quot;.</inlineHelpText>
    <label>Latest Hours</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>