force-app/main/default/objects/Placement__c/fields/Latest_Salary_TCP__c.field-meta.xml
<CustomField>
    <fullName>Latest_Salary_TCP__c</fullName>
    <formula>Latest_Hours_TCP__c *  Latest_Wage_TCP__c * 52</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Latest Salary</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>