force-app/main/default/objects/Placement__c/fields/Latest_Wage__c.field-meta.xml
<CustomField>
    <fullName>Latest_Wage__c</fullName>
    <label>Latest Wage (do not use)</label>
    <summarizedField>Advancement__c.Wage__c</summarizedField>
    <summaryFilterItems>
        <field>Advancement__c.Sequence__c</field>
        <operation>equals</operation>
        <value>Latest</value>
    </summaryFilterItems>
    <summaryForeignKey>Advancement__c.Job_Placement__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>