force-app/main/default/objects/Placement__c/fields/Latest_Wage_TCP__c.field-meta.xml
<CustomField>
    <fullName>Latest_Wage_TCP__c</fullName>
    <inlineHelpText>Per hour. To update, scroll down and click &quot;New Advancement&quot;.</inlineHelpText>
    <label>Latest Wage</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>