force-app/main/default/objects/Placement__c/fields/Legacy_Activity_ID_Access__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Activity_ID_Access__c</fullName>
    <externalId>true</externalId>
    <inlineHelpText>From Activity table in legacy Access database.</inlineHelpText>
    <label>Legacy Activity ID (Access)</label>
    <length>10</length>
    <type>Text</type>
</CustomField>