force-app/main/default/objects/Placement__c/fields/Legacy_CC_Client_ID_Access__c.field-meta.xml
<CustomField>
    <fullName>Legacy_CC_Client_ID_Access__c</fullName>
    <externalId>true</externalId>
    <label>Legacy CC Client ID (Access)</label>
    <length>10</length>
    <type>Text</type>
</CustomField>