force-app/main/default/objects/Placement__c/fields/Legacy_Company_Name__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Company_Name__c</fullName>
    <label>Legacy Company Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>