force-app/main/default/objects/Placement__c/fields/Legacy_End_Reason__c.field-meta.xml
<CustomField>
    <fullName>Legacy_End_Reason__c</fullName>
    <label>Legacy End Reason</label>
    <length>25</length>
    <type>Text</type>
</CustomField>