force-app/main/default/objects/Placement__c/fields/Legacy_End_Type__c.field-meta.xml
<CustomField>
    <fullName>Legacy_End_Type__c</fullName>
    <label>Legacy End Type</label>
    <length>25</length>
    <type>Text</type>
</CustomField>