force-app/main/default/objects/Placement__c/fields/Legacy_Job_Placement_Type__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Job_Placement_Type__c</fullName>
    <label>Legacy Job/Placement Type</label>
    <length>25</length>
    <type>Text</type>
</CustomField>