force-app/main/default/objects/Placement__c/fields/Legacy_Placement_Category__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Placement_Category__c</fullName>
    <label>Legacy Placement Category</label>
    <length>25</length>
    <type>Text</type>
</CustomField>