force-app/main/default/objects/Placement__c/fields/Legacy_Supervisor_Name__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Supervisor_Name__c</fullName>
    <label>Legacy Supervisor Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>