force-app/main/default/objects/Placement__c/fields/Length_of_Name_Field__c.field-meta.xml
<CustomField>
    <fullName>Length_of_Name_Field__c</fullName>
    <formula>LEN( Job_Title_from_Job_Order__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Length of Name Field</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>