force-app/main/default/objects/Placement__c/fields/Lost_Long_Term_Job__c.field-meta.xml
<CustomField>
    <fullName>Lost_Long_Term_Job__c</fullName>
    <description>Made for a report requested by Lauren.</description>
    <formula>IF (
    ISBLANK(End_Date__c),0,1
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lost Long-Term Job</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>