force-app/main/default/objects/Placement__c/fields/Lunch_Duration__c.field-meta.xml
<CustomField>
    <fullName>Lunch_Duration__c</fullName>
    <label>Lunch Duration</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>30 minutes</fullName>
            </value>
            <value>
                <fullName>45 minutes</fullName>
            </value>
            <value>
                <fullName>1 hour</fullName>
            </value>
            <value>
                <fullName>Paid Lunch</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>