force-app/main/default/objects/Placement__c/fields/Milestone_Job_Types__c.field-meta.xml
<CustomField>
    <fullName>Milestone_Job_Types__c</fullName>
    <description>ECM field to define what placements receive Placement Milestones for retention tracking. This field is customized on a customer by customer basis. This field is used in the CalculateMilestones__c formula.</description>
    <formula>&apos;Temporary,Internship,External Transitional (ETJ),Permanent,Temporary-Permanent&apos;</formula>
    <label>Milestone Job Types</label>
    <type>Text</type>
</CustomField>