force-app/main/default/objects/Placement__c/fields/Most_Recent_Interview_Count__c.field-meta.xml
<CustomField>
    <fullName>Most_Recent_Interview_Count__c</fullName>
    <description>Does not include those with only Start Date filled in unless attached to Job Order, since Send Out / Employment is also used to record jobs secured without the involvement of staff.</description>
    <formula>if (not (isblank (Most_Recent_Interview_Date__c)), 1, 

if (not (isblank (Start_Date__c)) &amp;&amp; not (isblank (Send_Out_Date__c)), 1, 

if (not (isblank (Start_Date__c)) &amp;&amp; not (isblank (Job_Order__c)), 1,

0)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Most Recent Interview Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>