force-app/main/default/objects/Placement__c/fields/Most_Recent_Interview_Date__c.field-meta.xml
<CustomField>
    <fullName>Most_Recent_Interview_Date__c</fullName>
    <formula>datevalue(if (ISBLANK(Advanced_Interview_Date__c) , if (ISBLANK(First_Interview_Date__c), &quot;&quot;, text(First_Interview_Date__c)), text(Advanced_Interview_Date__c)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Most Recent Interview Date</label>
    <type>Date</type>
</CustomField>