force-app/main/default/objects/Placement__c/fields/Most_Recent_Job_Formula__c.field-meta.xml
<CustomField>
    <fullName>Most_Recent_Job_Formula__c</fullName>
    <description>Checked if the job &apos;Start Date&apos; equals the &apos;Most Recent Employment Start Date&apos;, which is a rollup field on the Case Record.</description>
    <formula>not (isblank (Start_Date__c)) &amp;&amp; Start_Date__c =  Case_Record__r.Most_Recent_Employment_Start_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Most Recent Job (Formula)</label>
    <type>Checkbox</type>
</CustomField>