force-app/main/default/objects/Placement__c/fields/Most_Recent_Job_Workflow__c.field-meta.xml
<CustomField>
    <fullName>Most_Recent_Job_Workflow__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Workflow controlled field that mirrors &apos;Most Recent Job (Formula)&apos;. For use in &apos;Most Recent Employment End Date&apos; rollup field on Case Record, since formula fields cannot be used in rollups.</description>
    <label>Most Recent Job (Workflow)</label>
    <type>Checkbox</type>
</CustomField>