force-app/main/default/objects/Placement__c/fields/No_Placement_Date__c.field-meta.xml
<CustomField>
    <fullName>No_Placement_Date__c</fullName>
    <description>ECM Job Order Process for Cara</description>
    <label>No Placement Date</label>
    <type>Date</type>
</CustomField>