force-app/main/default/objects/Placement__c/fields/No_Placement_Reason__c.field-meta.xml
<CustomField>
    <fullName>No_Placement_Reason__c</fullName>
    <description>ECM Job Order Process for Cara</description>
    <inlineHelpText>Reason for No Placement</inlineHelpText>
    <label>No Placement Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Candidate Didn&apos;t Pass Job Assessment</fullName>
            </value>
            <value>
                <fullName>Candidate Found Other Position</fullName>
            </value>
            <value>
                <fullName>Candidate Had Poor Interview</fullName>
            </value>
            <value>
                <fullName>Candidate Dismissed</fullName>
                <label>Cara Inactivated Candidate</label>
            </value>
            <value>
                <fullName>Company Deferred Position</fullName>
            </value>
            <value>
                <fullName>Company Found Other Candidate</fullName>
            </value>
            <value>
                <fullName>Issues - Criminal Background/Legal</fullName>
            </value>
            <value>
                <fullName>Issues - Drug Test</fullName>
            </value>
            <value>
                <fullName>Issues - Medical</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>