force-app/main/default/objects/Placement__c/fields/Number_of_Advancements__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Advancements__c</fullName>
    <label>Number of Advancements</label>
    <summaryForeignKey>Advancement__c.Job_Placement__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>