force-app/main/default/objects/Placement__c/fields/Number_of_Contract_Milestones__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Contract_Milestones__c</fullName>
    <formula>Agency_Contract__r.Number_of_Milestones__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Number of Contract Milestones</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>