force-app/main/default/objects/Placement__c/fields/Number_of_Milestones__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Milestones__c</fullName>
    <description>ECM v1 Job Placement Service Domain</description>
    <inlineHelpText>The number of past Placement Milestones that have been recorded for a Placement.</inlineHelpText>
    <label>Number of Milestones</label>
    <summaryForeignKey>Placement_Milestone__c.Job_Placement__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>