force-app/main/default/objects/Placement__c/fields/of_Active_Location_Scheduling_Controls__c.field-meta.xml
<CustomField>
    <fullName>of_Active_Location_Scheduling_Controls__c</fullName>
    <label># of Pos Location Scheduling Controls</label>
    <summaryFilterItems>
        <field>Scheduling_Control__c.RecordTypeId</field>
        <operation>equals</operation>
        <value>Location</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Scheduling_Control__c.Control_End_Date__c</field>
        <operation>equals</operation>
        <value></value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Scheduling_Control__c.Control_Type__c</field>
        <operation>equals</operation>
        <value>Positive</value>
    </summaryFilterItems>
    <summaryForeignKey>Scheduling_Control__c.Send_Out_Employment__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>