force-app/main/default/objects/Placement__c/fields/Offer_Accepted_Date__c.field-meta.xml
<CustomField>
    <fullName>Offer_Accepted_Date__c</fullName>
    <label>Offer Accepted Date</label>
    <type>Date</type>
</CustomField>