force-app/main/default/objects/Placement__c/fields/Offer_Count__c.field-meta.xml
<CustomField>
    <fullName>Offer_Count__c</fullName>
    <formula>if ((not (isblank (Offer_Accepted_Date__c))||not(isblank(Offer_Made_Date__c))), 1, 

if (not (isblank (Start_Date__c)) &amp;&amp; not (isblank (Send_Out_Date__c)), 1, 

if (not (isblank (Start_Date__c)) &amp;&amp; not (isblank (Job_Order__c)), 1, 

0)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Offer Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>