force-app/main/default/objects/Placement__c/fields/One_Year_Retention_Bucket__c.field-meta.xml
<CustomField>
    <fullName>One_Year_Retention_Bucket__c</fullName>
    <formula>if (One_Year_Retention_Category_Text__c = &quot;#Retained&quot; || One_Year_Retention_Category_Text__c = &quot;#Retained One Year&quot; || One_Year_Retention_Category_Text__c = &quot;Lost Employment&quot; || One_Year_Retention_Category_Text__c = &quot;Tracking&quot;, &quot;Included&quot;, &quot;Not Included&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>One-Year Retention Bucket</label>
    <type>Text</type>
</CustomField>