force-app/main/default/objects/Placement__c/fields/One_Year_Retention_Calculation__c.field-meta.xml
<CustomField>
    <fullName>One_Year_Retention_Calculation__c</fullName>
    <formula>if (isblank (Placement_Number__c), NULL, 

if (value(right(text(Placement_Year__c), 2)) &gt;= 10 &amp;&amp; value(right(text(Placement_Year__c), 2)) &lt; 13, &quot;Retention Years CY11-FY13&quot;, 

if (value(right(text(Placement_Year__c), 2)) &gt;= 13 &amp;&amp; value(right(text(Placement_Year__c), 2)) &lt; 17, &quot;Retention Years FY14-FY17&quot;, 

if (value(right(text(Placement_Year__c), 2)) &gt;= 17, &quot;Retention Years FY18+&quot;, 

NULL))))</formula>
    <inlineHelpText>Cara&apos;s retention calculation has changed over the years. Check here to see which retention calculation applies to this placement.</inlineHelpText>
    <label>One-Year Retention Calculation</label>
    <type>Text</type>
</CustomField>