force-app/main/default/objects/Placement__c/fields/One_Year_Retention_Category__c.field-meta.xml
<CustomField>
    <fullName>One_Year_Retention_Category__c</fullName>
    <inlineHelpText>Placements marked as &quot;#Retained One Year&quot; (FY18+), &quot;#Retained&quot; (before FY18), &quot;Tracking&quot;, or &quot;Lost Employment&quot; are included in the retention calculation. Placements falling into any other category have been removed from the calculation.</inlineHelpText>
    <label>One-Year Retention Category</label>
    <length>50</length>
    <type>Text</type>
</CustomField>